Mobile layout issues

--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -127,7 +127,7 @@ input[type="checkbox"] {
 @media (max-width: 992px) {
     #navbar {
 
-        .inline-toggle {
+        .inline-toggle, .logo {
             display: block;
             margin: 0 1rem;
         }
